small tweak so that the text wrap is no longer an issue

--- a/src/index.css
+++ b/src/index.css
@@ -17,8 +17,8 @@ code {
 }
 
 .colWidth20{
-    min-width:20%;
-    width:20%
+    min-width:50px;
+    width:100px
 
 }
 
